--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.0.12",
+    "@tsconfig/node16": "^1.0.3",
     "aws-cdk-lib": "2.62.2",
     "constructs": "10.1.156",
-    "typescript": "^4.9.5",
-    "@tsconfig/node16": "^1.0.3"
+    "sst": "^2.0.12",
+    "typescript": "^4.9.5"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "apollo-server-lambda": "^3.11.1"
+  }
 }
