--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-sst-app",
+  "name": "backend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,11 +12,11 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.3",
+    "sst": "^2.0.23",
     "aws-cdk-lib": "2.62.2",
     "constructs": "10.1.156",
-    "sst": "^2.0.12",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@tsconfig/node16": "^1.0.3"
   },
   "workspaces": [
     "packages/*"
