--- a/backend/packages/core/package.json
+++ b/backend/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@my-sst-app/core",
+  "name": "@backend/core",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -7,11 +7,11 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^0.28.4",
+    "vitest": "^0.28.5",
     "@types/node": "^18.13.0",
-    "sst": "^2.0.12"
+    "sst": "^2.0.23"
   },
   "dependencies": {
-    "sst": "^2.0.12"
+    "sst": "^2.0.23"
   }
 }
