--- a/backend/packages/functions/tsconfig.json
+++ b/backend/packages/functions/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "esnext",
     "baseUrl": ".",
     "paths": {
-      "@my-sst-app/core/*": ["../core/src/*"]
+      "@backend/core/*": ["../core/src/*"]
     }
   }
 }
