--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "sst dev",
+    "dev": "sst dev --profile=personalAccount",
     "build": "sst build",
     "deploy": "sst deploy",
     "remove": "sst remove",
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "sst": "^2.0.23",
+    "@serverless-stack/cli": "1.18.4",
+    "@serverless-stack/resources": "1.18.4",
     "aws-cdk-lib": "2.62.2",
     "constructs": "10.1.156",
     "typescript": "^4.9.5",
