--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,19 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.0.23",
     "@serverless-stack/cli": "1.18.4",
     "@serverless-stack/resources": "1.18.4",
+    "@tsconfig/node16": "^1.0.3",
     "aws-cdk-lib": "2.62.2",
     "constructs": "10.1.156",
-    "typescript": "^4.9.5",
-    "@tsconfig/node16": "^1.0.3"
+    "sst": "^2.0.23",
+    "typescript": "^4.9.5"
   },
   "workspaces": [
     "packages/*"
   ],
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.16",
     "apollo-server-lambda": "^3.11.1"
   }
 }
