--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,11 @@
     "@tsconfig/node16": "^1.0.3",
     "aws-cdk-lib": "2.62.2",
     "constructs": "10.1.156",
-    "sst": "^2.0.23",
     "typescript": "^4.9.5"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "stacks/*"
   ],
   "dependencies": {
     "@graphql-tools/schema": "^9.0.16",
