--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "sst dev --profile=personalAccount",
+    "dev": "sst start --profile=personalAccount",
     "build": "sst build",
     "deploy": "sst deploy",
     "remove": "sst remove",
@@ -12,10 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@serverless-stack/cli": "1.18.4",
-    "@serverless-stack/resources": "1.18.4",
+    "@serverless-stack/cli": "1.15.11",
+    "@serverless-stack/resources": "1.15.11",
     "@tsconfig/node16": "^1.0.3",
-    "aws-cdk-lib": "2.62.2",
+    "aws-cdk-lib": "2.39.1",
     "constructs": "10.1.156",
     "typescript": "^4.9.5"
   },
@@ -25,6 +25,6 @@
   ],
   "dependencies": {
     "@graphql-tools/schema": "^9.0.16",
-    "apollo-server-lambda": "^3.11.1"
+    "apollo-server-lambda": "3.11.1"
   }
 }
