--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@serverless-stack/node": "1.8.2",
     "@serverless-stack/resources": "1.15.11",
     "@tsconfig/node16": "^1.0.3",
+    "@types/aws-lambda": "^8.10.110",
     "aws-cdk-lib": "2.39.1",
     "constructs": "10.1.156",
     "typescript": "^4.9.5"
@@ -25,7 +26,7 @@
     "stacks/*"
   ],
   "dependencies": {
-    "@aws-cdk/aws-lambda": "1.105.0",
+    "@aws-sdk/client-lambda": "3.180.0",
     "@graphql-tools/schema": "^9.0.16",
     "apollo-server-lambda": "3.11.1",
     "chrome-aws-lambda": "^10.1.0",
