--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
   ],
   "dependencies": {
     "@aws-sdk/client-lambda": "3.180.0",
-    "@sparticuz/chrome-aws-lambda": "^17.1.3",
+    "@sparticuz/chrome-aws-lambda": "15.5.0",
     "apollo-server-lambda": "3.6.7",
     "puppeteer": "15.5.0",
     "puppeteer-core": "9.1.0"
