--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "@aws-sdk/client-lambda": "3.180.0",
+    "@aws-sdk/client-s3": "3.87.0",
     "@sparticuz/chrome-aws-lambda": "15.5.0",
     "apollo-server-lambda": "3.6.7",
     "puppeteer": "15.5.0",
