--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "sst start --profile=personalAccount",
     "build": "sst build --profile=personalAccount",
     "deploy": "sst deploy",
-    "remove": "sst remove",
+    "remove": "sst remove --profile=personalAccount --stage=dev --verbose",
+    "removelocal": "sst remove --profile=personalAccount --stage=dev --verbose",
     "console": "sst console",
     "typecheck": "tsc --noEmit"
   },
