--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,13 @@
   },
   "dependencies": {
     "@apollo/client": "3.1.1",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "deepmerge": "^4.2.2",
-    "lodash": "4.17.20",
+    "framer-motion": "^10.0.1",
     "graphql": "^15.3.0",
+    "lodash": "4.17.20",
     "next": "latest",
     "prop-types": "^15.6.2",
     "react": "^18.2.0",
