--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,19 @@
   },
   "dependencies": {
     "@apollo/client": "3.1.1",
+    "@chakra-ui/next-js": "^2.0.1",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "deepmerge": "^4.2.2",
     "framer-motion": "^10.0.1",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.12.6",
     "lodash": "4.17.20",
     "next": "latest",
     "prop-types": "^15.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tslib": "^2.5.0"
   }
 }
