--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.1.1",
+    "antd": "^5.2.3",
     "deepmerge": "^4.2.2",
     "framer-motion": "^10.0.1",
     "graphql": "^15.3.0",
@@ -15,5 +16,10 @@
     "prop-types": "^15.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
